--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         
         <div>
-            <label for="">sobrenome:</label>
+            <label for="">Sobrenome:</label>
             <input type="text">
         </div>
     </form>
